--- a/become.tech.html
+++ b/become.tech.html
@@ -45,7 +45,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center">
-                <img src="img/logo3.png" alt="MANJARA INTERNATIONAL SCHOOL" width="40" height="40"
+                <img src="img/logo3.jpg" alt="MANJARA INTERNATIONAL SCHOOL" width="40" height="40"
                     class="d-inline-block align-text-top me-2">
                     <a href="index.html" class="navbar-brand">
                         <h1 class="m-0 text-primary"></i>Manjara International School</h1>
