--- a/team.html
+++ b/team.html
@@ -253,10 +253,10 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">@bmsds</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="#">@mis</a>, All Right Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By Sandesh Bellale.
+							Designed By <a class="border-bottom" href="https://www.linkedin.com/in/sandesh-bellale-6a55672bb/" target="_blank" rel="noopener noreferrer">Sandesh Bellale</a>.
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
