--- a/about.html
+++ b/about.html
@@ -458,7 +458,7 @@
                         <!-- President Card -->
                         <div class="team-card">
                             <img src="img/prisedent_2.jpg" alt="President" class="team-image" style="border-color: #e85613;">
-                            <h3 style="margin: 10px 0 5px; font-family: 'Poppins', sans-serif;">Dr. S. S. Patil</h3>
+                            <h3 style="margin: 10px 0 5px; font-family: 'Poppins', sans-serif;">Dr. S. S. Bellale</h3>
                             <p style="color: gray; margin-bottom: 15px;">President</p>
                             <div>
                                 <a href="https://www.instagram.com/sidheshwarbellale?igsh=MWR4ZjluMWlqMGhvdw==" target="_blank" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
@@ -481,7 +481,7 @@
                         <!-- Secretary Card -->
                         <div class="team-card">
                             <img src="img/secratray.jpg" alt="Secretary" class="team-image" style="border-color: #e85613;">
-                            <h3 style="margin: 10px 0 5px; font-family: 'Poppins', sans-serif;">Mrs. Jyoti Patil</h3>
+                            <h3 style="margin: 10px 0 5px; font-family: 'Poppins', sans-serif;">Mrs. Jyoti Kadwade</h3>
                             <p style="color: gray; margin-bottom: 15px;">Secretary</p>
                             <div>
                                 <a href="https://wa.me/91xxxxxxxxxx" class="social-icon whatsapp"><i class="fab fa-whatsapp"></i></a>
@@ -505,7 +505,7 @@
                         <div class="team-card">
                             <img src="img/managing_director.jpg" alt="Managing Director" class="team-image" style="border-color: #e85613;">
                             <h3 style="margin: 10px 0 5px; font-family: 'Poppins', sans-serif;">Mr. Sandesh Bellale</h3>
-                            <p style="color: gray; margin-bottom: 15px;">Managing Director</p>
+                            <p style="color: gray; margin-bottom: 15px;">Treasurer | Managing Director</p>
                             <div>
                                 <a href="https://www.linkedin.com/in/sandesh-bellale-6a55672bb/" target="_blank" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
                                 <a href="https://www.instagram.com/bsandeshh_/?theme=dark" target="_blank" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
